kubernetes/manifests/generated/development/infrastructure/linkerd-viz/1-manifest/deployment-linkerd-viz-tap-injector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"linkerd.io/created-by":"linkerd/helm stable-2.11.2"},"labels":{"app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"tap-injector","app.kubernetes.io/part-of":"Linkerd","component":"tap-injector","linkerd.io/extension":"viz"},"name":"tap-injector","namespace":"linkerd-viz"},"spec":{"replicas":1,"selector":{"matchLabels":{"component":"tap-injector"}},"template":{"metadata":{"annotations":{"checksum/config":" [...]
    linkerd.io/created-by: linkerd/helm stable-2.11.2
  labels:
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: tap-injector
    app.kubernetes.io/part-of: Linkerd
    component: tap-injector
    linkerd.io/extension: viz
  name: tap-injector
  namespace: linkerd-viz
spec:
  replicas: 1
  selector:
    matchLabels:
      component: tap-injector
  template:
    metadata:
      annotations:
        checksum/config: b11bbcabc077a28926b79aba1764d409d62b534aaf5a3f916f5e0528ea09744f
        linkerd.io/created-by: linkerd/helm stable-2.11.2
      labels:
        component: tap-injector
        linkerd.io/extension: viz
    spec:
      containers:
      - args:
        - injector
        - -tap-service-name=tap.linkerd-viz.serviceaccount.identity.linkerd.cluster.local
        - -log-level=info
        - -log-format=plain
        - -enable-pprof=false
        image: cr.l5d.io/linkerd/tap:stable-2.11.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /ping
            port: 9995
          initialDelaySeconds: 10
        name: tap-injector
        ports:
        - containerPort: 8443
          name: tap-injector
        - containerPort: 9995
          name: admin-http
        readinessProbe:
          failureThreshold: 7
          httpGet:
            path: /ready
            port: 9995
        securityContext:
          runAsUser: 2103
        volumeMounts:
        - mountPath: /var/run/linkerd/tls
          name: tls
          readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: tap-injector
      volumes:
      - name: tls
        secret:
          secretName: tap-injector-k8s-tls
