kubernetes/manifests/generated/development/infrastructure/linkerd-viz/1-manifest/deployment-linkerd-viz-tap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"linkerd.io/created-by":"linkerd/helm stable-2.11.2"},"labels":{"app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"tap","app.kubernetes.io/part-of":"Linkerd","app.kubernetes.io/version":"stable-2.11.2","component":"tap","linkerd.io/extension":"viz","namespace":"linkerd-viz"},"name":"tap","namespace":"linkerd-viz"},"spec":{"replicas":1,"selector":{"matchLabels":{"component":"tap","linkerd.io/extension":"vi [...]
    linkerd.io/created-by: linkerd/helm stable-2.11.2
  labels:
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: tap
    app.kubernetes.io/part-of: Linkerd
    app.kubernetes.io/version: stable-2.11.2
    component: tap
    linkerd.io/extension: viz
    namespace: linkerd-viz
  name: tap
  namespace: linkerd-viz
spec:
  replicas: 1
  selector:
    matchLabels:
      component: tap
      linkerd.io/extension: viz
      namespace: linkerd-viz
  template:
    metadata:
      annotations:
        checksum/config: 2bfccff9e29d8da3b1647dd339bb4bc0ef08c43116a260e0dc909ff73dbed441
        linkerd.io/created-by: linkerd/helm stable-2.11.2
      labels:
        component: tap
        linkerd.io/extension: viz
        namespace: linkerd-viz
    spec:
      containers:
      - args:
        - api
        - -api-namespace=linkerd
        - -log-level=info
        - -log-format=plain
        - -identity-trust-domain=cluster.local
        - -enable-pprof=false
        image: cr.l5d.io/linkerd/tap:stable-2.11.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /ping
            port: 9998
          initialDelaySeconds: 10
        name: tap
        ports:
        - containerPort: 8088
          name: grpc
        - containerPort: 8089
          name: apiserver
        - containerPort: 9998
          name: admin-http
        readinessProbe:
          failureThreshold: 7
          httpGet:
            path: /ready
            port: 9998
        securityContext:
          runAsUser: 2103
        volumeMounts:
        - mountPath: /var/run/linkerd/tls
          name: tls
          readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: tap
      volumes:
      - name: tls
        secret:
          secretName: tap-k8s-tls
