kubernetes/manifests/generated/development/infrastructure/linkerd-viz/1-manifest/service-linkerd-viz-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"linkerd.io/created-by":"linkerd/helm stable-2.11.2"},"labels":{"app.kubernetes.io/managed-by":"pulumi","component":"grafana","linkerd.io/extension":"viz","namespace":"linkerd-viz"},"name":"grafana","namespace":"linkerd-viz"},"spec":{"ports":[{"name":"http","port":3000,"targetPort":3000}],"selector":{"component":"grafana","linkerd.io/extension":"viz"},"type":"ClusterIP"}}
    linkerd.io/created-by: linkerd/helm stable-2.11.2
  labels:
    app.kubernetes.io/managed-by: pulumi
    component: grafana
    linkerd.io/extension: viz
    namespace: linkerd-viz
  name: grafana
  namespace: linkerd-viz
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    component: grafana
    linkerd.io/extension: viz
  type: ClusterIP
