kubernetes/manifests/generated/development/infrastructure/linkerd-viz/1-manifest/service-linkerd-viz-metrics-api.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"linkerd.io/created-by":"linkerd/helm stable-2.11.2"},"labels":{"app.kubernetes.io/managed-by":"pulumi","component":"metrics-api","linkerd.io/extension":"viz"},"name":"metrics-api","namespace":"linkerd-viz"},"spec":{"ports":[{"name":"http","port":8085,"targetPort":8085}],"selector":{"component":"metrics-api","linkerd.io/extension":"viz"},"type":"ClusterIP"}}
    linkerd.io/created-by: linkerd/helm stable-2.11.2
  labels:
    app.kubernetes.io/managed-by: pulumi
    component: metrics-api
    linkerd.io/extension: viz
  name: metrics-api
  namespace: linkerd-viz
spec:
  ports:
    - name: http
      port: 8085
      targetPort: 8085
  selector:
    component: metrics-api
    linkerd.io/extension: viz
  type: ClusterIP
