kubernetes/manifests/generated/development/infrastructure/linkerd-viz/1-manifest/service-linkerd-viz-tap-injector.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"linkerd.io/created-by":"linkerd/helm stable-2.11.2"},"labels":{"app.kubernetes.io/managed-by":"pulumi","component":"tap-injector","linkerd.io/extension":"viz"},"name":"tap-injector","namespace":"linkerd-viz"},"spec":{"ports":[{"name":"tap-injector","port":443,"targetPort":"tap-injector"}],"selector":{"component":"tap-injector","linkerd.io/extension":"viz"},"type":"ClusterIP"}}
    linkerd.io/created-by: linkerd/helm stable-2.11.2
  labels:
    app.kubernetes.io/managed-by: pulumi
    component: tap-injector
    linkerd.io/extension: viz
  name: tap-injector
  namespace: linkerd-viz
spec:
  ports:
    - name: tap-injector
      port: 443
      targetPort: tap-injector
  selector:
    component: tap-injector
    linkerd.io/extension: viz
  type: ClusterIP
