kubernetes/manifests/generated/development/infrastructure/linkerd-viz/1-manifest/service-linkerd-viz-tap.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"linkerd.io/created-by":"linkerd/helm stable-2.11.2"},"labels":{"app.kubernetes.io/managed-by":"pulumi","component":"tap","linkerd.io/extension":"viz","namespace":"linkerd-viz"},"name":"tap","namespace":"linkerd-viz"},"spec":{"ports":[{"name":"grpc","port":8088,"targetPort":8088},{"name":"apiserver","port":443,"targetPort":"apiserver"}],"selector":{"component":"tap","linkerd.io/extension":"viz"},"type":"ClusterIP"}}
    linkerd.io/created-by: linkerd/helm stable-2.11.2
  labels:
    app.kubernetes.io/managed-by: pulumi
    component: tap
    linkerd.io/extension: viz
    namespace: linkerd-viz
  name: tap
  namespace: linkerd-viz
spec:
  ports:
    - name: grpc
      port: 8088
      targetPort: 8088
    - name: apiserver
      port: 443
      targetPort: apiserver
  selector:
    component: tap
    linkerd.io/extension: viz
  type: ClusterIP
