kubernetes/manifests/generated/development/infrastructure/linkerd-viz/1-manifest/mutatingwebhookconfiguration-default-linkerd-tap-injector-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"MutatingWebhookConfiguration","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi","linkerd.io/extension":"viz"},"name":"linkerd-tap-injector-webhook-config"},"webhooks":[{"admissionReviewVersions":["v1","v1beta1"],"clientConfig":{"caBundle":"LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRRENDQWlpZ0F3SUJBZ0lRWENLbFN2RHYyOThCL3d4TDI5OUNOVEFOQmdrcWhraUc5dzBCQVFzRkFEQW4KTVNVd0l3WURWUVFERXh4MFlYQXRhVzVxWldOMGIzSXViR2x1YTJWeVpDMTJhWG [...]
  labels:
    app.kubernetes.io/managed-by: pulumi
    linkerd.io/extension: viz
  name: linkerd-tap-injector-webhook-config
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRRENDQWlpZ0F3SUJBZ0lRWENLbFN2RHYyOThCL3d4TDI5OUNOVEFOQmdrcWhraUc5dzBCQVFzRkFEQW4KTVNVd0l3WURWUVFERXh4MFlYQXRhVzVxWldOMGIzSXViR2x1YTJWeVpDMTJhWG91YzNaak1CNFhEVEl5TURVeApOVEF6TlRjeU9Wb1hEVEl6TURVeE5UQXpOVGN5T1Zvd0p6RWxNQ01HQTFVRUF4TWNkR0Z3TFdsdWFtVmpkRzl5CkxteHBibXRsY21RdGRtbDZMbk4yWXpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQUxXcmhlQTVmTUxLVGZPOEtJUVZmOGNPTzZFWHJlUXEvN21UMnV3d2xwSUsvNkczL01SZC9QZDJMVFdTV3UraQp5MHRWaTZFRkU1eT [...]
    service:
      name: tap-injector
      namespace: linkerd-viz
      path: /
  failurePolicy: Ignore
  name: tap-injector.linkerd.io
  reinvocationPolicy: IfNeeded
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
